playbooks/argocd/applications/home-automation/zigbee2mqtt/authentik-forward-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-zigbee2mqtt
  namespace: home-automation
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-authentik-outpost
  namespace: home-automation
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zigbee2mqtt.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: zigbee2mqtt.soyspray.vip
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-server-zigbee2mqtt
                port:
                  number: 80
